--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>xxxov777</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="hero">
-        <h1 class="hero-title">xxxov777</h1>
-        <p class="hero-subtitle">xxxov777</p>
-    </div>
+# Sample workflow for building and deploying a Jekyll site to GitHub Pages
+name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
-    <div class="card-container">
-        <div class="card">
-            <h2>关于我</h2>
-            <p>xxxov777</p>
-        </div>
-        <div class="card">
-            <h2>xxxov777</h2>
-            <p>xxxov777</p>
-            <p>xxxov777</p>
-        </div>
-        <div class="card">
-            <h2>联系我</h2>
-            <p>邮箱：xxxov777@gmail.com</p>
-        </div>
-    </div>
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
 
-    <footer>
-        <p>&copy; xxxov777 </p>
-    </footer>
-</body>
-</html>
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+jobs:
+  # Build job
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./
+          destination: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
